test/classes/bradc/syncAsClass3.chpl
var myObject: borrowed RootClass?;

var mysync: sync int;

myObject = mysync;
